# server/src/api_documentation.json
@@ -1190,7 +1190,22 @@
                         "content": {
                             "application/json": {
                                 "schema": {
-                                    "$ref": "#/components/schemas/Profile"
+                                    "allOf": [
+                                        {
+                                            "$ref": "#/components/schemas/Profile"
+                                        },
+                                        {
+                                            "type": "object",
+                                            "properties": {
+                                                "role": {
+                                                    "type": "string",
+                                                    "description": "Rola użytkownika - `user` albo `moderator`.",
+                                                    "example": "moderator"
+                                                }
+                                            },
+                                            "required": ["role"]
+                                        }
+                                    ]
                                 }
                             }
                         }
